Pipelines/RunOnK8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lk8s-ingress
spec:
  rules:
  - host: lk8s
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lk8s-api-service
            port: 
              number: 5001
